<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.owenlejeune.iou.MainActivity">
    <item
        android:id="@+id/additional_settings"
        android:title="@string/additional_settings"
        app:showAsAction="collapseActionView">
        <item
            android:id="@+id/contact_me"
            android:title="@string/contact_me"/>
        <item
            android:id="@+id/privacy_policy"
            android:title="@string/policy" />
        <item
            android:id="@+id/rate_review"
            android:title="@string/rate"/>
        <item
            android:id="@+id/clear_all"
            android:title="@string/clear_all"/>
    </item>

</menu>